Add generating verification code for user